@@ -4,7 +4,7 @@ import java.awt.Container;
 import javax.swing.JFrame;
 
 public class Main
-{
+{	
 	public static void main(String[] args)
 	{
 		Debug.Initialize(args);		
